[package]
name    = "soroban-explorer-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.7.7", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[[test]]
name = "auth_tests"
path = "tests/auth_tests.rs"

[[test]]
name = "storage_bench"
path = "tests/storage_bench.rs"
